--- a/LoanManagementApi/LoanManagementApi.csproj
+++ b/LoanManagementApi/LoanManagementApi.csproj
@@ -17,6 +17,8 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+		<!--<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />-->
 	</ItemGroup>
 
 </Project>
